examples/test/testpolicy10356.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10356
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key26: value28
      key45: value25
      key33: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value26
      podSelector:
        matchLabels:
          key47: value15
